objects/WT_Attendee_Junction__c.object
<CustomObject>
    <description>created as part of DBSFCRM-709</description>
    <fields>
        <fullName>WT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of story DBSFCRM-1018</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Attendee_Junction_ID__c</fullName>
        <description>Created as part of DBSFCRM-138</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Junction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Attendee_Name_Formula__c</fullName>
        <description>created as part of DBSFCRM-138</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Attendee_Type__c</fullName>
        <description>Created as part of DBSFCRM-1018</description>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Users</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Persons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of DBSFCRM- 138</description>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of DBSFCRM-1018</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Event__c</fullName>
        <description>created as part of DBSFCRM-138</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of story-138</description>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>Attendee Number-{000000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>